--- a/app/src/main/res/layout/fragment_app_welcome_screen.xml
+++ b/app/src/main/res/layout/fragment_app_welcome_screen.xml
@@ -26,7 +26,7 @@
             android:layout_gravity="center"
             android:layout_margin="@dimen/welcome_screen_text_icon_margin"
             android:text="@string/chat_chat"
-            android:textColor="@color/purpleIris"
+            android:textColor="@color/purple_500"
             android:textSize="@dimen/welcome_screen_app_name_size" />
     </LinearLayout>
 
