--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -1,95 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.LogInFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="@dimen/welcome_screen_icon_size"
-            android:layout_height="@dimen/welcome_screen_icon_size"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/welcome_screen_text_icon_margin"
-            android:background="@drawable/ic_baseline_chat_24"
-            android:contentDescription="@string/app_name" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/emailOrMobileLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/enter_email_or_mobile">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/emailOrMobile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
-                android:layout_marginVertical="@dimen/welcome_screen_button_margin"
-                android:autofillHints="emailAddress"
-                android:inputType="text" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/logInPasswordLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/enter_password"
-            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-            app:passwordToggleEnabled="true">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/logInPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
-                android:autofillHints="password"
-                android:inputType="textPassword" />
-        </com.google.android.material.textfield.TextInputLayout>
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
-            android:layout_marginTop="@dimen/login_screen_forgot_pass_margin"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/forgotPassword"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/login_screen_forgot_pass_margin"
-                android:layout_marginTop="@dimen/welcome_screen_text_icon_margin"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:text="@string/forgot_password" />
-
-            <TextView
-                android:id="@+id/signUp"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/welcome_screen_text_icon_margin"
-                android:layout_marginEnd="@dimen/login_screen_forgot_pass_margin"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:text="@string/new_here_sign_up"
-                android:textAlignment="textEnd" />
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/logInButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/welcome_screen_button_margin"
-            android:backgroundTint="@color/blueOrchid"
-            android:text="@string/log_in" />
-    </LinearLayout>
+            android:orientation="vertical">
 
-</ScrollView>
+            <ImageView
+                android:layout_width="@dimen/welcome_screen_icon_size"
+                android:layout_height="@dimen/welcome_screen_icon_size"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/welcome_screen_text_icon_margin"
+                android:background="@drawable/ic_baseline_chat_24"
+                android:contentDescription="@string/app_name" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/emailOrMobileLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_email_or_mobile">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/emailOrMobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+                    android:layout_marginVertical="@dimen/welcome_screen_button_margin"
+                    android:autofillHints="emailAddress"
+                    android:inputType="text" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/logInPasswordLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_password"
+                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
+                app:passwordToggleEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/logInPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+                    android:autofillHints="password"
+                    android:inputType="textPassword" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+                android:layout_marginTop="@dimen/login_screen_forgot_pass_margin"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/forgotPassword"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/login_screen_forgot_pass_margin"
+                    android:layout_marginTop="@dimen/welcome_screen_text_icon_margin"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:text="@string/forgot_password" />
+
+                <TextView
+                    android:id="@+id/goToSignUp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/welcome_screen_text_icon_margin"
+                    android:layout_marginEnd="@dimen/login_screen_forgot_pass_margin"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:text="@string/new_here_sign_up"
+                    android:textAlignment="textEnd" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/logInButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/welcome_screen_button_margin"
+                android:backgroundTint="@color/blueOrchid"
+                android:text="@string/log_in" />
+        </LinearLayout>
+    </ScrollView>
+
+</layout>
