some MVVM & others

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activites.MainActivity">
+    tools:context=".activites.HomeActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/main_activity_fragment_container"
+        android:id="@+id/home_activity_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
