--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -9,15 +9,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.progressindicator.CircularProgressIndicator
+        <FrameLayout
             android:id="@+id/signUpProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:indicatorColor="@color/blueOrchid"
             android:layout_gravity="center"
-            android:indeterminate="true"
-            android:visibility="invisible"
-            app:indicatorSize="@dimen/common_100dp"/>
+            android:visibility="invisible">
+
+            <ProgressBar
+                android:id="@+id/progressBar1"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="@dimen/common_100dp"
+                android:layout_height="@dimen/common_100dp"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/blueIvy"
+                android:visibility="visible" />
+
+            <ProgressBar
+                android:id="@+id/progressBar2"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="@dimen/common_70dp"
+                android:layout_height="@dimen/common_70dp"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/blueIvy"
+                android:rotation="180"
+                android:visibility="visible" />
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -48,7 +67,9 @@
                     android:background="@drawable/blue_circle"
                     android:clickable="true"
                     android:contentDescription="@string/profile_picture"
-                    android:tag="Default" />
+                    android:tag="Default"
+                    app:civ_border_color="@color/purple_500"
+                    app:civ_border_width="4dp" />
 
             </FrameLayout>
 
@@ -118,14 +139,14 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/mobile_no">
 
-                        <EditText
+                        <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/mobile"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
                             android:layout_marginBottom="@dimen/welcome_screen_text_icon_margin"
                             android:autofillHints="phone"
-                            android:inputType="phone" />
+                            android:inputType="number" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -133,10 +154,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/password"
+                        app:errorIconDrawable="@null"
                         app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
                         app:passwordToggleEnabled="true">
 
-                        <EditText
+                        <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -151,10 +173,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/confirm_password"
+                        app:errorIconDrawable="@null"
                         app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
                         app:passwordToggleEnabled="true">
 
-                        <EditText
+                        <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/confirmPassword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
