--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.ChatChat" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
@@ -15,6 +15,7 @@
         <!-- Text color -->
         <item name="android:textColor">@color/black</item>
         <item name="colorOnSurface">@color/black</item>
+        <!--item name="android:textColorHighlight">@color/darkGray</item-->
         <!-- Navigation bar color. -->
         <item name="android:navigationBarColor">@color/blue</item>
     </style>
